link navigation fixed (parts of sections linked were covered by the nav bar)

--- a/module3/css/style.css
+++ b/module3/css/style.css
@@ -5,6 +5,7 @@
 body {
     background: url("images/restaurant-food.jpg") no-repeat;
     background-size: cover;
+    padding-top: 50px;
 }
 
 /******** Header section *********/
@@ -32,14 +33,29 @@ nav.navbar.navbar-default {
 
 .jumbotron h1 {
     margin-bottom: 15px;
-    margin-top: 60px;
     font-weight: bolder;
     font-family: "Julius Sans One", Arial, sans-serif;
     color: rgb(255, 255, 255);
     text-shadow: 3px 3px #484848;
 }
 
+h1:before {
+    display: block;
+    content: " ";
+    margin-top: -180px;
+    height: 180px;
+    visibility: hidden;
+}
+
 /******** Content *********/
+
+h3:before {
+    display: block;
+    content: " ";
+    margin-top: -80px;
+    height: 80px;
+    visibility: hidden;
+}
 
 article {
     position: relative;
